Remove SSR Changelog and add Ember Changelog

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -13,6 +13,7 @@ $font-family-sans-serif: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI",
 
 @import "footer";
 @import "nav-bar";
+@import "changelog";
 @import "side-nav-bar";
 @import "account-show";
 @import "account-entry";
