Rework users table

--- a/frontend/app/templates/components/admin/user/table-row.hbs
+++ b/frontend/app/templates/components/admin/user/table-row.hbs
@@ -6,7 +6,12 @@
   <td>{{@user.label}}</td>
   <td>{{if @user.lastLoginAt (moment-format @user.lastLoginAt "DD.MM.YYYY hh:mm") ""}}</td>
   <td>{{@user.lastLoginFrom}}</td>
-  <td>{{@user.auth}}{{#if @user.providerUid}}:{{/if}} {{@user.providerUid}}</td>
+  <td>{{@user.auth}}
+    {{#if @user.providerUid}}
+      :
+    {{/if}}
+    {{@user.providerUid}}
+  </td>
   <td>
     <div>
       <PowerSelect @options={{ROLES}} @onChange={{fn this.updateRole @user}} @selected={{this.selectedRole}}
