--- a/frontend/app/templates/admin/users.hbs
+++ b/frontend/app/templates/admin/users.hbs
@@ -1,23 +1,1 @@
-<div class="pt-3">
-  <div class="justify-content-end">
-    <LinkTo @route="index">
-      <button type="button" class="close" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </LinkTo>
-  </div>
-  <h1>{{t "admin.users.index.title"}}</h1>
-  {{#if @model.locked}}
-    <BsTab as |tab|>
-      <tab.pane id="unlocked" @title={{t "admin.users.index.unlocked"}}>
-        <Admin::User::Table @users={{@model.unlocked}} />
-      </tab.pane>
-      
-      <tab.pane id="locked" @title={{t "admin.users.index.locked"}}>
-        <Admin::User::Table @users={{@model.locked}} />
-      </tab.pane>
-    </BsTab>
-  {{else}}
-    <Admin::User::Table @users={{@model.unlocked}} />
-  {{/if}}
-</div>
+<Admin::Users></Admin::Users>
