--- a/frontend/app/templates/admin/users.hbs
+++ b/frontend/app/templates/admin/users.hbs
@@ -1,1 +1,1 @@
-<Admin::Users></Admin::Users>
+<Admin::Users @unlockedUsers={{@model.unlockedUsers}} @lockedUsers={{@model.lockedUsers}}></Admin::Users>
