--- a/frontend/app/templates/components/admin/users.hbs
+++ b/frontend/app/templates/components/admin/users.hbs
@@ -13,14 +13,13 @@
     </div>
   </div>
 
-  <div style="display: flex; align-items: center">
+  <div class="users-table-header">
     <h1>
       {{t "admin.users.index.title"}}
     </h1>
 
     {{#if this.isDeletable}}
-      <a class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleUserNew}}
-         style="max-height: 38px; margin-left: auto">
+      <a class="btn btn-secondary edit_button add-user" role="button" {{on "click" this.toggleUserNew}}>
         <img class="icon-button" src="/assets/images/plus.svg" alt="edit">
         <BsTooltip @title={{t "admin.users.index_menu.create"}} @delayShow="1000"/>
       </a>
