Fix css & cleanup

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -366,3 +366,9 @@ li a {
 [aria-disabled="true"] {
   cursor: default;
 }
+
+.admin-back-button {
+  border: 1px solid #c9c9c9;
+  width: 45px;
+  background-color: #ebe3df;
+}
