--- a/frontend/app/templates/components/admin/user/table-row.hbs
+++ b/frontend/app/templates/components/admin/user/table-row.hbs
@@ -15,8 +15,8 @@
   </td>
   <td>
     <div>
-      <PowerSelect @options={{ROLES}} @onChange={{fn this.updateRole @user}} @selected={{this.selectedRole}}
-                   @disabled={{roleEditDisabled}} @animationEnabled={{false}} @renderInPlace={{true}} as |role|>
+      <PowerSelect @options={{this.availableRoles}} @onChange={{fn this.updateRole @user}} @selected={{this.selectedRole}}
+                   @disabled={{this.isRoleEditingDisabled}} @animationEnabled={{false}} @renderInPlace={{true}} as |role|>
         {{role.name}}
       </PowerSelect>
     </div>
