--- a/frontend/app/templates/components/admin/user/table.hbs
+++ b/frontend/app/templates/components/admin/user/table.hbs
@@ -1,4 +1,4 @@
-<table class="table table-striped">
+<table class="table table-striped mb-15">
   <thead>
     <tr>
       <th>{{t "admin.users.index.username"}}</th>
