Add nav bar system spec

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -50,7 +50,7 @@
       <BsDropdown @class="d-flex align-items-center" as |dd|>
         <LinkTo @route="admin.users" @tagName="pzsh-topbar-link" class="administration">
           <pzsh-icon name="users-alt"></pzsh-icon>
-          Administration
+          Admin
         </LinkTo>
         <dd.toggle class="dropdown-toggle">
           <img class="icon-dropdown-toggle-2" src="/assets/images/angle-down-white.svg" alt="v">
