--- a/frontend/app/templates/components/account/show.hbs
+++ b/frontend/app/templates/components/account/show.hbs
@@ -55,7 +55,7 @@
       </div>
       <a role="button" class="correct-pixel-error-omg show-password-button show-text {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "accounts.show.show_password"}}</a>
       <div class="result-password">
-        <Input id="cleartext_password" class="d-inline form-control" @disabled="true" @value={{@account.cleartextPassword}}/>
+        <Input id="cleartext_password" class="d-inline form-control {{if this.isPasswordVisible "" "visibility-hidden"}}" @disabled="true" @value={{@account.cleartextPassword}}/>
         <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextPassword}}>
           <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
         </CopyButton>
