--- a/frontend/app/styles/background-colors.scss
+++ b/frontend/app/styles/background-colors.scss
@@ -1,5 +1,5 @@
 .bg-blue-one {
-  background-color: #eaf1f7 !important;
+  background-color: #F8F8F8 !important;
   color: #3b3c3e !important;
 }
 
@@ -8,12 +8,8 @@
   color: white !important;
 }
 
-bg-white {
+.bg-white {
   background-color: white !important;
-}
-
-.bg-blue-1 {
-  background-color: #eaf1f7 !important;
 }
 
 .bg-grey-2 {
@@ -26,7 +22,7 @@ bg-white {
 
 
 .bg-light-blue {
-  background-color: #c7d9e9;
+  background-color: #f8f8f8;
 }
 
 @media screen and (max-width: 991px) {
@@ -38,7 +34,7 @@ bg-white {
 
 @media screen and (min-width: 992px) {
   .bg-blue-three {
-    background-color: #1b8dc6 !important;
+    background-color: #1E5A96 !important;
     color: white !important;
   }
 }
