--- a/frontend/app/styles/folder-show.scss
+++ b/frontend/app/styles/folder-show.scss
@@ -16,7 +16,7 @@
 }
 
 .folder-card-header {
-  background-color: #c7d9e9;
+  background-color: #F8F8F8;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   padding-bottom: 5px;
