--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -29,7 +29,7 @@
 }
 
 .action-wrapper {
-  background-color: #40a3d8;
+  background-color: rgb(49 136 194);
   align-content: center;
   height: 100%;
   border-bottom-right-radius: 3px;
