--- a/frontend/app/templates/components/folder/show.hbs
+++ b/frontend/app/templates/components/folder/show.hbs
@@ -14,15 +14,15 @@
     </div>
     <div class="col-auto justify-content-between d-flex align-items-center align-right-on-smartphone">
       <a class="margin-for-buttons mx-1" role="button" {{on "click" this.toggleAccountCreating}}>
-        <img class="icon-big-button " src="/assets/images/plus.svg" alt="new">
+        <img class="icon-big-button " src="/assets/images/plus-blue.svg" alt="new">
         <BsTooltip @title={{t "tooltips.add_account"}} @delayShow="1000" />
       </a>
       <a class="margin-for-buttons mx-1" role="button" {{on "click" this.toggleFolderEdit}}>
-        <img class="icon-big-button " src="/assets/images/edit.svg" alt="edit folder">
+        <img class="icon-big-button " src="/assets/images/edit-blue.svg" alt="edit folder">
         <BsTooltip @title={{t "folders.tooltips.edit"}} @delayShow="1000" />
       </a>
       <DeleteWithConfirmation @class="mx-1" @record={{@folder}} @didDelete={{this.refreshRoute}}>
-        <img class="icon-big-button d-inline my-auto" src="/assets/images/delete.svg" alt="delete folder">
+        <img class="icon-big-button d-inline my-auto" src="/assets/images/delete-blue.svg" alt="delete folder">
         <BsTooltip @title={{t "tooltips.delete_folder"}} @delayShow="1000" />
       </DeleteWithConfirmation>
     </div>
