--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -20,7 +20,7 @@
               {{#each this.navService.sortedTeams as |team|}}
                 <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action team-list-item {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}} ">
                   {{#if team.private}}
-                    <img class="icon icon-button mr-2" src="/assets/images/encrypted_small-blue.svg" alt="">
+                    <img class="icon icon-button mr-2" src="/assets/images/{{if (eq team this.navService.selectedTeam) "encrypted_small-white.svg" "encrypted_small-blue.svg"}}" alt="">
                   {{else}}
                     <img class="icon icon-button mr-2" src="/assets/images/members.svg" alt="">
                   {{/if}}
