--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -190,7 +190,7 @@
 
   .side-nav-bar-teams-list .list-group-item:hover {
     cursor: pointer;
-    background-color: #1b8dc6 !important;
+    background-color: #1E5A96 !important;
   }
 }
 
