--- a/frontend/app/templates/components/admin/user/table-row.hbs
+++ b/frontend/app/templates/components/admin/user/table-row.hbs
@@ -15,20 +15,20 @@
   </td>
   <td>
     <div>
-      <PowerSelect @options={{ROLES}} @onChange={{fn this.updateRole @user}} @selected={{this.selectedRole}}
-                   @disabled={{roleEditDisabled}} @animationEnabled={{false}} @renderInPlace={{true}} as |role|>
+      <PowerSelect @options={{this.availableRoles}} @onChange={{fn this.updateRole @user}} @selected={{this.selectedRole}}
+                   @disabled={{this.isRoleEditingDisabled}} @animationEnabled={{false}} @renderInPlace={{true}} as |role|>
         {{role.name}}
       </PowerSelect>
     </div>
   </td>
   <td>
-    {{#if this.isEditable}}
+    {{#if @user.editable}}
       <span role="button" {{on "click" this.toggleEditing}}>
         <img class="icon-medium-button d-inline" src="/assets/images/edit.svg" alt="edit">
         <BsTooltip @title={{t "accounts.edit.title"}} @delayShow="1000"/>
       </span>
     {{/if}}
-    {{#if this.isDeletable}}
+    {{#if @user.deletable}}
       <Admin::User::DeletionForm @user={{@user}}>
         <img src="/assets/images/delete.svg" alt="delete" class="icon-button">
       </Admin::User::DeletionForm>
